Mark Rich as primary maintainer of the remote driver

--- a/AUTHORS
+++ b/AUTHORS
@@ -12,6 +12,7 @@ are:
   Karel Zak            <kzak@redhat.com>       (virsh tool)
   Daniel Berrange      <berrange@redhat.com>   (test & qemu drivers)
   Mark McLoughlin      <markmc@redhat.com>     (network driver)
+  Richard W.M. Jones   <rjones@redhat.com>     (remote driver)
 
 Patches have also been contributed by:
 
@@ -25,7 +26,6 @@ Patches have also been contributed by:
   Michel Ponceau       <michel.ponceau@bull.net>
   Jeremy Katz          <katzj@redhat.com>
   Pete Vetere          <pvetere@redhat.com>
-  Richard W.M. Jones   <rjones@redhat.com>
   Atsushi SAKAI        <sakaia@jp.fujitsu.com>
   Kazuki Mizushima     <mizushima.kazuk@jp.fujitsu.com>
   Saori Fukuta         <fukuta.saori@jp.fujitsu.com>
