* src/xen_internal.c: applied patch from Christian Ehrhardt to   fix Xen hypervisor alignment problems on PPC64 * AUTHORS: added Christian Daniel

--- a/AUTHORS
+++ b/AUTHORS
@@ -34,6 +34,7 @@ Patches have also been contributed by:
   Nobuhiro Itou        <fj0873gn@aa.jp.fujitsu.com>
   Masayuki Sunou       <fj1826dm@aa.jp.fujitsu.com>
   Mark Johnson         <johnson.nh@gmail.com>
+  Christian Ehrhardt   <ehrhardt@linux.vnet.ibm.com>
 
   [....send patches to get your name here....]
 
