--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Jul 16 17:36:24 EST 2007 Daniel P. Berrange <berrange@redhat.com>
+
+	* docs/libvir.html, docs/remote.html: Re-write notes on IPV6
+	support in the remote daemon
+
 Mon Jul 16 16:59:24 EST 2007 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/qemu_conf.c, src/qemu_conf.h, src/xend_internal.c,
